# echo

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile.api  Dockerfile.web  ai-tools-interview-kb.md  docker-compose.yml
.claude/: settings.json
.claude/hooks/: auto-format.sh  validate-bash.sh
.github/workflows/: ci.yml  nightly.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/agents/: architect.py  coder.py  docs_agent.py  graph.py  node_tracing.py  prompts.py  qa.py  reviewer.py  runner.py  security.py  state.py  supervisor.py  tools.py
apps/api/src/api/: agents.py  rag.py  traces.py  ws.py
apps/api/src/db/: session.py
apps/api/src/db/alembic/: env.py
apps/api/src/db/alembic/versions/: 05df721e935b_initial_schema.py  17847a902ef5_initial_schema.py
apps/api/src/gateway/: middleware.py  rate_limiter.py  router.py  scrubber.py  tracker.py
apps/api/src/models/: __init__.py  agent_run.py  audit_log.py  base.py  cost_ledger.py  rag.py  trace_event.py  user.py
apps/api/src/rag/: chunkers.py  graph_schema.py  indexer.py  retriever.py
apps/api/src/schemas/: agent.py  rag.py  trace.py
apps/api/tests/: conftest.py  test_main.py  test_models.py
apps/api/tests/integration/: conftest.py  test_agents_flow.py  test_health_db.py  test_ollama_embed_smoke.py  test_ollama_smoke.py  test_rag_flow.py
apps/api/tests/integration/fixtures/tiny_repo/: sample.py
apps/api/tests/test_agents/: test_graph.py  test_state.py  test_supervisor.py
apps/api/tests/test_api/: test_agents_api.py  test_rag_api.py  test_traces_api.py
apps/api/tests/test_gateway/: test_rate_limiter.py  test_router.py  test_scrubber.py  test_tracker.py
apps/web/: biome.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/e2e/: agent-run.spec.ts  auth.spec.ts  rag-explorer.spec.ts
apps/web/e2e/fixtures/: api.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/admin/: page.tsx
apps/web/src/app/dashboard/agents/: page.tsx
apps/web/src/app/dashboard/agents/[id]/: page.tsx
apps/web/src/app/dashboard/rag/: page.tsx
apps/web/src/app/dashboard/rag/graph/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/components/agent-console/: agent-history.tsx  agent-list.tsx  run-console.tsx  task-form.tsx
apps/web/src/components/graph-viz/: knowledge-graph.tsx
apps/web/src/components/trace-viewer/: hitl-card.tsx  trace-node.tsx  trace-tree.tsx
apps/web/src/components/ui/: card.tsx
apps/web/src/db/: drizzle.config.ts  schema.ts
apps/web/src/lib/: api-client.ts  auth.ts  query-provider.tsx  types.ts  ws-client.ts
apps/web/tests/components/: agent-console.test.tsx  trace-viewer.test.tsx
docs/: manual-testing-guide.md
docs/superpowers/plans/: 2026-04-05-project-echo-implementation.md  2026-04-08-echo-integration-e2e-verification.md  2026-04-08-phase2-wiring-and-integration.md
docs/superpowers/specs/: 2026-04-05-project-echo-design.md  2026-04-11-openrouter-chat-provider-design.md  2026-04-12-agent-console-redesign.md
scripts/: e2e-down.sh  e2e-up.sh  test-api.sh
