[project]
name = "echo-api"
version = "0.1.0"
description = "E.C.H.O. — Enterprise Cognitive Hub & Orchestration API"
requires-python = ">=3.14"
dependencies = [
    "fastapi~=0.135.3",
    "uvicorn",
    "pydantic~=2.12.5",
    "pydantic-settings>=2.0",
    "sqlalchemy~=2.0.49",
    "asyncpg",
    "alembic~=1.18.4",
    "structlog~=25.5.0",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
