[project]
name = "echo-api"
version = "0.1.0"
description = "E.C.H.O. — Enterprise Cognitive Hub & Orchestration API"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]~=0.135.3",
    "pydantic~=2.12.5",
    "pydantic-settings>=2.0",
    "sqlalchemy~=2.0.49",
    "asyncpg",
    "alembic~=1.18.4",
    "structlog~=25.5.0",
    "websockets",
    "greenlet>=3.3.2",
    "litellm>=1.83.0",
    "presidio-analyzer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "UP",          # pyupgrade
  "B",           # bugbear
  "SIM",         # simplify
  "RUF",         # ruff-specific
  "N",           # pep8-naming
  "ASYNC",       # async best practices
  "S",           # bandit (security)
  "T20",         # print statements
  "PTH",         # pathlib
  "PERF",        # performance
  "RET",         # return statements
  "ARG",         # unused arguments
  "FBT",         # boolean trap
  "C4",          # comprehensions
  "DTZ",         # datetime timezone
  "PIE",         # misc lints
  "TCH",         # type-checking imports
  "TID",         # tidy imports
]
ignore = [
  "S101",        # allow assert (used in tests)
  "ARG001",      # unused function args (common in FastAPI deps)
  "B008",        # function call in default arg (FastAPI Depends())
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG", "FBT"]
"src/models/**" = ["TCH003"]           # SQLAlchemy Mapped[] needs types at runtime
"src/db/session.py" = ["TCH003"]       # async generator type used at runtime
"src/db/alembic/versions/**" = ["E501", "TCH"]  # auto-generated migrations

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
