[project]
name = "echo-api"
version = "0.1.0"
description = "E.C.H.O. — Enterprise Cognitive Hub & Orchestration API"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]~=0.135.3",
    "pydantic~=2.12.5",
    "pydantic-settings>=2.0",
    "sqlalchemy~=2.0.49",
    "asyncpg",
    "alembic~=1.18.4",
    "structlog~=25.5.0",
    "opentelemetry-sdk~=1.40.0",
    "opentelemetry-api~=1.40.0",
    "opentelemetry-instrumentation-fastapi",
    "websockets",
    "greenlet>=3.3.2",
    "litellm>=1.83.0",
    "langchain-core>=0.3.0",
    "presidio-analyzer",
    "langgraph~=1.1.0",
    "llama-index-core~=0.14",
    "llama-index-vector-stores-postgres",
    "llama-index-embeddings-ollama",
    "tree-sitter~=0.25.2",
    "tree-sitter-python~=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
    "testcontainers[postgres]>=4.8",
    "pytest-xdist",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "UP",          # pyupgrade
  "B",           # bugbear
  "SIM",         # simplify
  "RUF",         # ruff-specific
  "N",           # pep8-naming
  "ASYNC",       # async best practices
  "S",           # bandit (security)
  "T20",         # print statements
  "PTH",         # pathlib
  "PERF",        # performance
  "RET",         # return statements
  "ARG",         # unused arguments
  "FBT",         # boolean trap
  "C4",          # comprehensions
  "DTZ",         # datetime timezone
  "PIE",         # misc lints
  "TCH",         # type-checking imports
  "TID",         # tidy imports
]
ignore = [
  "S101",        # allow assert (used in tests)
  "ARG001",      # unused function args (common in FastAPI deps)
  "B008",        # function call in default arg (FastAPI Depends())
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG", "FBT"]
"src/api/agents.py" = ["TC002"]  # AsyncSession used in Depends() runtime annotations
"src/api/traces.py" = ["TC002", "TC003"]
"src/schemas/**" = ["TC003"]  # Pydantic field types need runtime imports
"src/models/**" = ["TCH003"]           # SQLAlchemy Mapped[] needs types at runtime
"src/db/session.py" = ["TCH003"]       # async generator type used at runtime
"src/db/alembic/versions/**" = ["E501", "TCH"]  # auto-generated migrations
"src/agents/coder.py" = ["TC001", "TC002"]
"src/agents/reviewer.py" = ["TC001", "TC002"]
"src/agents/qa.py" = ["TC001", "TC002"]
"src/agents/security.py" = ["TC001", "TC002"]
"src/agents/docs_agent.py" = ["TC001", "TC002"]
"src/agents/architect.py" = ["TC001", "TC002"]
"src/agents/tools.py" = ["TC001", "TC002"]
"src/gateway/tracker.py" = ["TC002"]
"src/agents/runner.py" = ["TC002"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires docker (real postgres via testcontainers)",
  "ollama: requires local ollama server with nomic-embed-text for embeddings",
]
